# agentforge

./: .env.example  .gitignore  ARCHITECTURE.md  COST_LATENCY_REPORT.md  LICENSE  MVP_EVIDENCE.md  README.md  RESILIENCE.md  THREAT_MODEL.md  TODO.md  USERS.md  dashboard.html  deploy-dashboard.sh  presearch.md  pyproject.toml
evals/: success_criteria.md  thresholds.yaml
reports/: 09760e1eba48__denial-of-service-no-per-request-token-cap-read-every-page.md  0a835bf2ab43__data-exfiltration-traces-endpoint-not-admin-gated.md  232ef37f4d15__data-exfiltration-traces-endpoint-not-admin-gated.md  3b56c0f56dfd__data-exfiltration-session-adoption-cross-panel-replay.md  3d00bceb35fb__misinformation-zero-citation-clinical-reassurance.md  446da468d0a4__denial-of-service-no-per-request-token-cap-read-every-page.md  4fdfcd5e35b2__data-exfiltration-traces-endpoint-not-admin-gated.md  53d43e97f232__misinformation-zero-citation-clinical-reassurance.md  56db1d3035bb__prompt-injection-indirect-via-document-image.md  60ba5fa98ffb__data-exfiltration-session-adoption-cross-panel-replay.md  61b578cab34b__misinformation-zero-citation-clinical-reassurance.md  62bfe988f723__data-exfiltration-binary-idor-by-id.md  6c8a9cf04c67__data-exfiltration-session-adoption-cross-panel-replay.md  6e8f11b936fe__denial-of-service-no-per-request-token-cap-read-every-page.md  71187f01556d__misinformation-zero-citation-clinical-reassurance.md  73c33d0a5901__data-exfiltration-binary-idor-by-id.md  73cbc2df0686__data-exfiltration-session-adoption-cross-panel-replay.md  80847137ca13__data-exfiltration-traces-endpoint-not-admin-gated.md  809166e87b7f__prompt-injection-indirect-via-document-image.md  83a002f1e62c__prompt-injection-indirect-via-document-image.md  841555bf325b__data-exfiltration-binary-idor-by-id.md  8d8e894f920b__data-exfiltration-binary-idor-by-id.md  8e38cd778b60__data-exfiltration-traces-endpoint-not-admin-gated.md  (+21 more)
(+70 files in other folders)
