[project]
name = "agentforge"
version = "0.1.0"
description = "An autonomous multi-agent adversarial-evaluation platform for LLM-assisted clinical chatbots."
authors = [{ name = "Harrison Voegeli" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Agent framework
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # LLM access (OpenRouter is OpenAI-compatible)
    "openai>=1.50.0",
    # HTTP client for the target Co-Pilot
    "httpx>=0.27.0",
    # Schemas + validation
    "pydantic>=2.9.0",
    # Env + config
    "python-dotenv>=1.0.0",
    # Storage
    "sqlite-utils>=3.37.0",
    # Dashboard (FastAPI is overkill for a static-render dashboard; revisit)
    "jinja2>=3.1.0",
    # Misc
    "rich>=13.0.0",  # nicer CLI output
    "typer>=0.12.0", # CLI entrypoint
]

[project.scripts]
agentforge = "agentforge.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
]
# Adversarial-testing toolkit deps — installed as a group so MVP setup
# isn't blocked if any single one is fiddly. PyRIT / garak both ship on PyPI.
# promptfoo is a Node CLI; treat as a system dep (npm install -g promptfoo).
attacks = [
    "pyrit>=0.5.0",
    "garak>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
# E501 (line-too-long) is left to `ruff format`, which wraps code but intentionally
# does not reflow comments/strings — so long explanatory comments don't error.
ignore = ["E501"]
